welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:1: error: '<-' expected but ')' found.
for(i<1 to 40){
             ^Runner:8: error: illegal start of simple expression
	}
        ^